--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "dev-server": "webpack-dev-server",
-    "build": "webpack"
+    "build:dev": "webpack",
+    "build:prod": "webpack -p --env production"
   },
   "dependencies": {
     "babel-cli": "6.24.1",
@@ -16,6 +17,7 @@
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.4",
+    "extract-text-webpack-plugin": "3.0.0",
     "firebase": "4.2.0",
     "history": "^5.2.0",
     "live-server": "^1.2.1",
